# eink

frontend/: frontend.sln
frontend/src/TerribleDev.EInk.UI/: Program.cs  TerribleDev.EInk.UI.csproj
piold/: pyproject.toml
piold/pi/: run.py
